INCLUDES = -I$(top_srcdir)/src/svnfrontend/fronthelpers $(all_includes)
METASOURCES = AUTO
libgraphtree_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libgraphtree.la




noinst_HEADERS = revgraphview.h revgraphitem.h treemap.h graphtree_defines.h \
	graphtreelabel.h elogentry.h revisiontree.h pannerview.h
libgraphtree_la_SOURCES = revgraphview.cpp revgraphitem.cpp treemap.cpp \
	graphtreelabel.cpp elogentry.cpp revisiontree.cpp pannerview.cpp
